bin/tests/snapshots/useless_has_attr__fix_3c62cf80cceead28f219a180d924a9293dbb692ce56d6c91e10e49790390913a.snap
---
source: bin/tests/useless_has_attr.rs
expression: "\"if x ? a.b then x.a.b else default\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-if x ? a.b then x.a.b else default
+x.a.b or default
