bin/tests/snapshots/useless_has_attr__fix_514032635e11fe0f21c05881885de04587ba8db14854db99efccb6bb57f7bf8c.snap
---
source: bin/tests/useless_has_attr.rs
expression: "\"if x ? a then x.a else default\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-if x ? a then x.a else default
+x.a or default
